--- a/Jauntic/style.css
+++ b/Jauntic/style.css
@@ -103,8 +103,37 @@ body {
     cursor: pointer;
     background-color: transparent;
     border-radius: 10px;
-    box-shadow: 3px 2px 13px white;
 }
+/* Light mode button */
+.btn-light {
+  color: #000707;
+  background-color: transparent;
+  transition: all 0.3s ease;
+    box-shadow: 3px 2px 13px black;
+
+}
+
+.btn-light:hover {
+  box-shadow: -2px 6px 23px black;
+}
+
+/* Dark mode button */
+.btn-dark {
+  color: #f8f9fa;
+  background-color: #88b8e7ff;
+  transition: all 0.3s ease;
+    box-shadow: 3px 2px 13px white;
+
+}
+
+.btn-dark:hover {
+  box-shadow: -2px 6px 23px white;
+
+}
+
+
+
+
 .main2{
     display: flex;
     flex-direction: column-reverse;
